# ai-course

./: README.md  items.db
.augment/: rules.md
.devcontainer/: Dockerfile  devcontainer.json
module1/: JOURNAL.md  PART_1.md  items.db
module1/prompts/: 1-web-api-specs-updated.md  1-web-api-specs.md  2-web-api-prompt.md  3-web-api-plan-updated.md  3-web-api-plan.md  4-admin-ui-specs-updated.md  4-admin-ui-specs.md  5-admin-ui-prompt-updated.md  5-admin-ui-prompt.md  5-web-api-prompt-updated.md  6-admin-ui-plan-updated.md  6-admin-ui-plan.md  7-client-library-plan.md
module1/web-api-mvp/: README.md  items.db  requirements.txt
module3/cline_project/: INSTRUCTIONS.md  JOURNAL.md
module4/project/: JOURNAL.md
module6/project/: .env.example  .gitignore  EXERCISE.md  JOURNAL.md  PLAN.md  PLAN_after.md  PLAN_kim.md  README.md  STEPS.md  main.py  pyproject.toml  releases.json
module6/project/data/reports/: risk_report_v2.1.0_2025-12-28.json
module6/project/data/traces/2025-12-28/: trace_230609_02c98e7f.json
module6/project/evals/: __init__.py
module6/project/src/detective_agent/: __init__.py  agent.py  agent_test.py  cli.py  config.py  config_test.py  conftest.py  models.py  models_test.py  persistence.py  persistence_test.py  types.py
module6/project/src/detective_agent/context/: __init__.py
module6/project/src/detective_agent/observability/: __init__.py  exporter.py  models.py  observability_test.py  tracer.py
module6/project/src/detective_agent/providers/: __init__.py  base.py  errors.py  openrouter.py  openrouter_test.py
module6/project/src/detective_agent/retry/: __init__.py
module6/project/src/detective_agent/tools/: __init__.py  definitions.py  registry.py  registry_test.py  release_tools.py  release_tools_test.py
module7/project/: .env.example  .gitignore  DESIGN.md  EXERCISE.md  JOURNAL.md  PLAN_before.md  README.md  WORKFLOW.md  cli.py  pyproject.toml
module7/project/data/: .gitkeep
module7/project/src/investigator_agent/: __init__.py  agent.py  config.py
module7/project/src/investigator_agent/evaluation/: __init__.py
module7/project/src/investigator_agent/observability/: __init__.py  callbacks.py  tracer.py
module7/project/src/investigator_agent/persistence/: __init__.py
module7/project/src/investigator_agent/tools/: __init__.py
module7/project/tests/: __init__.py
module7/project/tests/integration/: __init__.py
module7/project/tests/unit/: __init__.py  test_agent.py  test_config.py  test_observability.py
web-api-mvp/: .gitignore  MAKEFILE  README.md  check_db.py  pyproject.toml
web-api-mvp/app/: crud.py  database.py  main.py  models.py  schemas.py
web-api-mvp/changes/: 001-environment-support.md  environment-implementation-plan.md
web-api-mvp/client/: package-lock.json  package.json  tsconfig.json
(+38 files in other folders)
